# pysdf

./: .gitignore  .gitremotes  CMakeLists.txt  package.xml  setup.cfg  setup.py
pysdf/: conversions.py  parse.py
scripts/: sdf2urdf.py
src/pysdf/: .parse.py.swp  __init__.py  conversions.py  naming.py  parse.py
